# NyarchUpdater

./: README.md  meson.build  moe.nyarchlinux.updater.json  run.sh
.github/workflows/: flatpak-build.yml
data/: meson.build  moe.nyarchlinux.updater.desktop.in.in  moe.nyarchlinux.updater.gschema.xml  moe.nyarchlinux.updater.metainfo.xml.in.in
po/: nyarchupdater.pot  zh_CN.po  zh_CN.po~
src/: aur.js  faq.ui  main.js  meson.build  moe.nyarchlinux.updater.data.gresource.xml  moe.nyarchlinux.updater.src.gresource.xml  presentation.js  settings.js  settings.ui  utils.js  window.js  window.ui
